updating our details

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am learning to be a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Kansas City Area</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to travel</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Currently, I would like to become a developer to grow into my IT career</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>KC area</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I recently learned to build PowerApps and it would help to take my career to the next level.</p>
     </section>
 
     <footer id="footer">
